Prevent smushed screenreader text https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe

--- a/freeform.scss
+++ b/freeform.scss
@@ -9,6 +9,7 @@
   border: 0;
   margin: -1px;
   padding: 0;
+  white-space: nowrap;
 }
 
 .clearfix::after {
